# image-analyzer

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: pull_request_template.md  stale.yaml
.github/actions/check-changes/: action.yaml
.github/actions/infra/: action.yaml
.github/actions/run-cr-job/: action.yaml
.github/workflows/: cd.yaml  ci.yaml  codeql.yaml  deploy-infra.yaml  run-cr-job.yaml
configs/: config.yaml
scripts/: run_cr_job.sh  run_tf.sh
src/: annotate.py  check_model.py
src/agents/: agent_runner.py  analyzer.py
src/agents/instructions/: data_models.py  system_prompts.py
src/core/: config.py  logger.py  pipeline.py  rate_limiter.py
src/data_processing/: bq_processor.py  image_processor.py  utils.py
src/data_processing/sql_queries/: dam_article_pic.sql
terraform/: .terraform.lock.hcl  dev.tfvars  main.tf  outputs.tf  prod.tfvars  variables.tf
terraform/modules/artifact_registry/: main.tf  outputs.tf  variables.tf
terraform/modules/bigquery/: main.tf  outputs.tf  variables.tf
terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf
tests/: conftest.py
tests/integration_tests/: test_rate_limiter_int.py
tests/performance_tests/: test_agents_data_model.py  test_image_processing.py  test_pipeline_perf.py
tests/unit_tests/agents/: test_agent_runner.py  test_analyzer.py
tests/unit_tests/core/: test_config.py  test_logger.py  test_pipeline.py  test_rate_limiter.py
tests/unit_tests/data_processing/: test_bq_processor.py  test_image_processor.py  (+1 more)
