[project]
name = "image-analysis"
version = "0.1.0"
description = "Analyze images"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "db-dtypes>=1.5.1",
    "gcsfs>=2026.3.0",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-bigquery-storage>=2.37.0",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.6",
    "pandas>=2.3.3",
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pandas-stubs>=3.0.0.260204",
    "pylint>=4.0.5",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
    "types-pyyaml>=6.0.12.20260408",
    "types-tqdm>=4.67.3.20260408",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.mypy]
mypy_path = ["src", "tests"]
show_error_codes = true
ignore_missing_imports = false
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["gcsfs.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "network: test requires external network access (deselect with -m 'not network')",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
